--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -7,3 +7,6 @@ opencv-python==4.9.0.80
 numpy==1.26.4
 matplotlib==3.9.0
 scikit-learn==1.4.1.post1
+
+# Day 3 requirements
+deep_translator==1.11.4
