--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -1,18 +1,15 @@
 colorama==0.4.6
 numpy==1.26.4
+opencv-python==4.9.0.80
 scikit-learn==1.5.1
+
+### UNIQUE REQUIREMENTS ###
 
 # Day 1 requirements 
 nltk==3.8.1
 
 # Day 2 requirements
-opencv-python==4.9.0.80
 matplotlib==3.9.0
 
 # Day 3 requirements
 deep_translator==1.11.4
-
-# Day 4 requirements
-
-# Day 5 requirements
-opencv-python==4.9.0.80
