--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -1,19 +1,22 @@
 colorama==0.4.6
+matplotlib==3.9.0
 numpy==1.26.4
 opencv-python==4.9.0.80
 scikit-learn==1.5.1
 
 ### UNIQUE REQUIREMENTS ###
 
-# Day 1 requirements 
+# Day 1
 nltk==3.8.1
 
-# Day 2 requirements
-matplotlib==3.9.0
-
-# Day 3 requirements
+# Day 3 
 deep_translator==1.11.4
 
-# Day 6 requirements
+# Day 6 
 transformers==4.38.2
 torch
+
+# Day 7
+joblib==1.4.0
+pandas==2.2.1
+Pillow
