--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -1,14 +1,12 @@
 colorama==0.4.6
 matplotlib==3.9.0
+nltk==3.8.1
 numpy==1.26.4
 opencv-python==4.9.0.80
 pandas==2.2.1
 scikit-learn==1.5.1
 
 ### UNIQUE REQUIREMENTS ###
-
-# Day 1
-nltk==3.8.1
 
 # Day 3 
 deep_translator==1.11.4
@@ -20,3 +18,9 @@ torch
 # Day 7
 joblib==1.4.0
 Pillow
+
+# Day 9
+textblob>=0.17.1
+python-dotenv>=1.0.1
+python-twitter-v2>=0.9.2
+vaderSentiment
