--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -1,4 +1,3 @@
-colorama==0.4.6
 matplotlib==3.9.0
 nltk==3.8.1
 numpy==1.26.4
@@ -24,3 +23,6 @@ textblob>=0.17.1
 python-dotenv>=1.0.1
 python-twitter-v2>=0.9.2
 vaderSentiment
+
+# Day 11
+kagglehub>=0.2.9
